--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,4 +19,6 @@ jobs:
         go-version: 1.17
 
     - name: Build
-      uses: nisargshah1410/goexample@v1
+      uses: nisargshah1410/goexample@v1.2
+      with: 
+        path: ./goexample.go
