--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,6 +17,9 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.17
+    
+    - name: Go build
+      run: go build
 
     - name: Build
       uses: nisargshah1410/goexample@v1.2
