--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,9 @@ jobs:
         go-version: 1.17
     
     - name: Go build
-      run: go build
+      run: |
+        go mod init
+        go build
 
     - name: Build
       uses: nisargshah1410/goexample@v1.2
